@@ -1,0 +1,6 @@
+-----------
+Authors:
+-----------
+
+Simon Wenner <wenners@student.ethz.ch>
+Christan Wäckerlin <christian@waeckerlin.com>
